<resources>
    <string name="app_name">PABPAssignment</string>

    <!--    ini adalah value untuk tampil description dan label    -->
    <string name="Welcome_Alert">Hello Dunia!.</string>
    <string name="label_button">Submit disini</string>
    <string name="content_description">Ini adalah sebuah foto Android terkini</string>
    <string name="instruksi_alas">Masukkan luas alas</string>
    <string name="isi_alas_1">Ganti Isi alas disini</string>
    <string name="instruksi_tinggi">Masukkan luas tinggi</string>
    <string name="isi_tinggi">Ganti Isi tinggi disini</string>
    <string name="hasil_luas">Hasil luas akan muncul disini</string>
    <string name="hasil_luas_segitiga_mainActivity">Luas Segitiga: </string>
    <string name="contentDescription_profile_photo">Ini adalah foto profil</string>
    <string name="button_description_1">Deskripsi</string>
    <string name="tv_judul_1">Judul</string>
    <string name="tv_pengarang_1">Pengarang</string>
    <string name="tv_harga_1">Harga</string>
    <string name="deskripsi_buku_tv">DESKRIPSI BUKU</string>
    <string name="isi_deskripsi_buku_lengkap">Ini adalah deskripsi lengkap dari buku yang akan ditampilkan pada masing-masing buku</string>
    <string name="button_desc_sosmed_IG">IG</string>
    <string name="ig">IG</string>
    <string name="button_desc_phone">Phone</string>
    <string name="username_tv">Username</string>
    <string name="password_tv">Password</string>
    <string name="login_btn_1">Login</string>
    <string name="inst_ussername">Masukkan Username</string>
    <string name="inst_password">Masukkan Password</string>
    <string name="tv_main_menu">Tugas Pengembangan Aplikasi Mobile</string>
    <string name="tv_pertemuan02">Praktik Pert. 2</string>
    <string name="tv_pertemuan03">Praktik Pert. 3</string>
    <string name="tv_pertemuan04">Praktik Pert. 4</string>
    <string name="tv_pertemuan05">Praktik Pert. 5</string>
    <string name="keluar_aplikasi_btn">Keluar Aplikasi</string>
    <string name="title_activity_main_desc_book">MainActivityDescBook</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="btn_ke_profil_saya">Profil Saya</string>
    <string name="nim_urfan">5200411194</string>
    <string name="nama_lengkap_urfan">Muhammad Urfan Adjie Pratama</string>
    <string name="tv_hubungi_saya">Terhubung saya melalui</string>
    <string name="welcome_string">Halo, boleh saya mengenalmu!.</string>
    <string name="splashscreenmessage">ini adalah gambar splash screen</string>
    <string name="tv_pert8">Kirim Notifikasi (Pert. 8)</string>
    <string name="desc_alert">Masukkan Namamu dan buat password ya!.</string>
    <string name="alert_halo_str">Halo,</string>
    <string name="biar_lupa_passwordnya">Biar kamu engga lupa passwordnya!.</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="punten_minta_izin_ya_sepuh">Punten, minta izin ya, Sepuh!.</string>
    <string name="makasih_puh">Makasih puh!.</string>
    <string name="test_kriuk">Test Kriuk</string>
    <string name="kirim_pesan_ke_notifikasi">Kirim Pesan ke Notifikasi</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="tulis_judul_kategori_1">Tulis Judul Kategori 1</string>
    <string name="kirim_pesan_kategori_1">Kirim Pesan Kategori 1</string>
    <string name="tulis_judul_kategori_2">Tulis Judul Kategori 2</string>
    <string name="tulis_pesan_kategori_2">Tulis Pesan Kategori 2</string>
    <string name="atau_mau_coba_untuk_kategori_2_juga">Atau mau coba untuk kategori 2 juga!.</string>
    <string name="setelah_izin_kamu_bisa_kirim_pesan_ke_notifikasi_kamu_lho">Setelah izin, kamu bisa kirim pesan ke Notifikasi kamu lho!.</string>
    <string name="test_kriuk_2">Klik Test Kriuk untuk izin Notifikasi. Lanjutkan jika sudah.</string>
    <string name="ingatkan_saya">Ingatkan saya!!.</string>
    <string name="ingatkan_saya_desc">Lihat waktu diatas, menunjukan waktu sekarang. Ingatkan saya dalam waktu yang kamu tentukan</string>
    <string name="ingatkan_saya_pada">Ingatkan saya pada :</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="sudah_pilih_atur_waktu">Sudah pilih?, Atur Waktu!.</string>
    <string name="batalkan_alarm">Batalkan Alarm</string>
    <string name="TimeExample">00 : 00 AM/PM</string>
    <string name="hello_world">Hello World!</string>
    <string name="name_string">Name</string>
    <string name="species_string">species</string>
    <string name="human_string">Human</string>
    <string name="alive_string">alive</string>
    <string name="get_api_btn_desc">Praktik 11 - Get API</string>
</resources>