<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contentDescription_profile_photo"
        android:src="@drawable/person_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="144dp"
        android:text="@string/button_desc_phone"
        app:layout_constraintStart_toStartOf="@+id/image_profile_photo"
        app:layout_constraintTop_toTopOf="@+id/image_profile_photo" />

    <Button
        android:id="@+id/button_deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:text="@string/button_description_1"
        app:layout_constraintStart_toStartOf="@+id/image_profile_photo"
        app:layout_constraintTop_toTopOf="@+id/image_profile_photo" />

    <TextView
        android:id="@+id/tv_pengarang_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_harga_1"
        app:layout_constraintStart_toStartOf="@+id/image_profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_harga_1" />

    <Button
        android:id="@+id/button_sosmed_IG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="144dp"
        android:text="@string/ig"
        app:layout_constraintStart_toStartOf="@+id/image_profile_photo"
        app:layout_constraintTop_toTopOf="@+id/image_profile_photo" />

    <TextView
        android:id="@+id/tv_harga_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_pengarang_1"
        app:layout_constraintStart_toStartOf="@+id/image_profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_1" />

    <TextView
        android:id="@+id/tv_judul_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_judul_1"
        app:layout_constraintStart_toStartOf="@+id/image_profile_photo"
        app:layout_constraintTop_toTopOf="@+id/image_profile_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>