<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityAlarmManager">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/splash_screen_logo" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.058"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingatkan_saya"
            android:textSize="16pt"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingatkan_saya_desc" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingatkan_saya_pada" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TimeExample"
            android:textSize="12pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <Button
            android:id="@+id/btn_pilih_waktu"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_waktu" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btn_atur_waktu"
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudah_pilih_atur_waktu" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btn_batalkan_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/batalkan_alarm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>